fixed syntax and spelling errors

--- a/Web200/bioSite/Code/bioSite.html
+++ b/Web200/bioSite/Code/bioSite.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Biosite Assignment 4.3 Develop Patterns">
-    <meta name="robots" content="noindex">
     <meta name="author" content="Daniel Heredia">
     <meta name="pragma" content="no-cache">
     <link href="biosite-style.css" type="text/css" rel="stylesheet">
@@ -27,7 +26,7 @@
     <h2>Inspiration</h2>
     <div class="inspiration">
         <img src="https://via.placeholder.com/" alt="This is a placeholder">
-        <p>At 16 years old, Kathy had gotten pregnant and had her first child.  As she looks back, she acknowledges this as being one of the biggest blessings in her life as it motivated her to work hard.  Kathy graduated High Scool and began working.  However, she never forgot about her dream.  At 24, Kathy obtained her cosmetology license and went into working for herself.  With her hard work and determination, Kathy built herself into the successful businesswoman she is today. 
+        <p>At 16 years old, Kathy had gotten pregnant and had her first child.  As she looks back, she acknowledges this as being one of the biggest blessings in her life as it motivated her to work hard.  Kathy graduated High School and began working.  However, she never forgot about her dream.  At 24, Kathy obtained her cosmetology license and went into working for herself.  With her hard work and determination, Kathy built herself into the successful businesswoman she is today. 
         <img src="https://via.placeholder.com/" alt="This is a placeholder">
         <img src="https://via.placeholder.com/" alt="This is a placeholder">
         <img src="https://via.placeholder.com/" alt="This is a placeholder">            
