updated html and css code for layout and content

--- a/Web200/bioSite/Code/bioSite.html
+++ b/Web200/bioSite/Code/bioSite.html
@@ -10,40 +10,84 @@
     <title>BioSite</title>
 </head>
 <body>
-    <div class="header">
+    <div id="top" class="header">
         <img src="/Web200/bioSite/Images/KathyBike.jpg" alt="Kathy on a bike" >
         <h1>Kathy's Cool Website</h1>
     </div><!--end of header-->
-        <h2>The Beginnings</h2>
-        <div class="history">
-        <img src="https://via.placeholder.com/" alt="This is a placeholder">
-        <p>Kathy is a native Texan having grown up in a small town of about 4000 people.  She recalls much of her enjoyment from exploring the outdoors.  Living in a small town, which at the time was not very developed, she was able to play with her friends in the creeks and wooded areas of this rural town.  As a kid, Kathy wanted to be both a hairstylist and a business owner.  Years later, with drive and determination, she turned this dream into a reality.
-        <img src="https://via.placeholder.com/" alt="This is a placeholder">
-        <img src="https://via.placeholder.com/" alt="This is a placeholder">
-        <img src="https://via.placeholder.com/" alt="This is a placeholder">
-        </p>
-    </div><!--end of history-->
-    <h2>Inspiration</h2>
-    <div class="inspiration">
-        <img src="https://via.placeholder.com/" alt="This is a placeholder">
-        <p>At 16 years old, Kathy had gotten pregnant and had her first child.  As she looks back, she acknowledges this as being one of the biggest blessings in her life as it motivated her to work hard.  Kathy graduated High School and began working.  However, she never forgot about her dream.  At 24, Kathy obtained her cosmetology license and went into working for herself.  With her hard work and determination, Kathy built herself into the successful businesswoman she is today. 
-        <img src="https://via.placeholder.com/" alt="This is a placeholder">
-        <img src="https://via.placeholder.com/" alt="This is a placeholder">
-        <img src="https://via.placeholder.com/" alt="This is a placeholder">            
-        </p>
-    <img src="https://via.placeholder.com/" alt="This is a placeholder">
-    </div> <!--end of inspiration-->
-    <h2>Hobbies</h2>
-    <div class="hobbies">
-    <p>Kathy loves life and often enjoys reading, painting, cooking, and baking.  One of her favorite pastimes is writing.  Kathy is a stand-up comic and often uses personal experiences to bring joy and laughter to others.  When it's time to unwind, Kathy describes her perfect afternoon as relaxing on a beach with a drink, not a worry.  </p>
-    <img src="https://via.placeholder.com/" alt="This is a placeholder">
+
+    <div class="nav">
+        <a href="#inspiration">Inspiration</a>
+        <a href="#hobbies">Hobbies</a>
+        <a href="#present_day">Present Day</a>
+    </div><!--end of navigation bar-->
+
+
+    <div class="row">
+        <div class="leftcolumn">
+            <div class="info">
+                <h2>The Beginnings</h2>
+                <div class="leftfakeimg">
+                    Image
+                </div>
+                <p>Kathy is a native Texan having grown up in a small town of about 4000 people.  She recalls much of her enjoyment from exploring the outdoors.  Living in a small town, which at the time was not very developed, she was able to play with her friends in the creeks and wooded areas of this rural town.  As a kid, Kathy wanted to be both a hairstylist and a business owner.  Years later, with drive and determination, she turned this dream into a reality.</p>
+            </div>
+            <div class="info">
+                <h2 id="inspiration">Inspiration</h2>
+                <div class="leftfakeimg">
+                    Image
+                </div>
+                <p>At 16 years old, Kathy had gotten pregnant and had her first child.  As she looks back, she acknowledges this as being one of the biggest blessings in her life as it motivated her to work hard.  Kathy graduated High School and began working.  However, she never forgot about her dream.  At 24, Kathy obtained her cosmetology license and went into working for herself.  With her hard work and determination, Kathy built herself into the successful businesswoman she is today.</p>
+            </div>
+            <div class="info">
+                <h2 id="present_day">Present Day</h2>
+                <div class="leftfakeimg">
+                    Image
+                </div>
+                <p>Having left Texas to the Midwest, Kathy now looks forward to the next chapter in her life.  Her family and friends would say she is the sweetest, caring, most thoughtful, and hardworking person.  To me, she is the most exquisite, joyful, and fun person I could ask to spend my life with. </p>
+            </div>
+        </div>
+        <div class="rightcolumn">
+            <div class="info">
+                <h2 id="hobbies">Hobbies</h2>
+                <div class="rightfakeimg">
+                    Image
+                </div>
+                <p>Kathy loves life and often enjoys reading, painting, cooking, and baking.  One of her favorite pastimes is writing.  Kathy is a stand-up comic and often uses personal experiences to bring joy and laughter to others.  When it's time to unwind, Kathy describes her perfect afternoon as relaxing on a beach with a drink, not a worry.</p>
+            </div>
+            <div class="info">
+                <div class="rightfakeimg">
+                    Image
+                </div>
+                <div class="rightfakeimg">
+                    Image
+                </div>
+                <div class="rightfakeimg">
+                    Image
+                </div>
+            </div>
+        </div>
     </div>
-    <h2>Present Day</h2>
-    <div class="present">
-    <p>Having left Texas to the Midwest, Kathy now looks forward to the next chapter in her life.  Her family and friends would say she is the sweetest, caring, most thoughtful, and hardworking person.  To me, she is the most exquisite, joyful, and fun person I could ask to spend my life with. </p>
-    <img src="https://via.placeholder.com/" alt="This is a placeholder">
-    <img src="https://via.placeholder.com/" alt="This is a placeholder">
-    <img src="https://via.placeholder.com/" alt="This is a placeholder">
+
+    <div class="bottomnav">
+        <a href="#top">Top</a>
     </div>
-</body>
-</html>
+
+    <div class="footer">
+        Created by Daniel Heredia</br>
+        Web200-A337</br>
+        Sept 13, 2020</br>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
